bugfix - Too big icon & scroll when adding

--- a/src/pages/list/list.scss
+++ b/src/pages/list/list.scss
@@ -23,45 +23,43 @@ page-list {
     }
     .checkmark {
         position: relative;
-        top: 1px;
-        width: 17px;
-        height: 17px;
-        border: 1px solid #C8CCD4;
+        width: 15px;
+        height: 15px;
+        border: 2px solid #C8CCD4;
         border-radius: 3px;
         vertical-align: middle;
         transition: background .1s ease;
         cursor: pointer;
+        &:after {
+            content: '';
+            position: absolute;
+            top: 0px;
+            left: 4px;
+            width: 2px;
+            height: 7px;
+            opacity: 0;
+            transform: rotate(45deg) scale(0);
+            border-right: 2px solid #fff;
+            border-bottom: 2px solid #fff;
+            transition: all 0.3s ease;
+            transition-delay: 0.15s;
+        }
     }
     /* On mouse-over and disabled add a grey background color */
     .checkmark:hover,
     input:disabled~.checkmark {
         background: #e1e1e1;
+        border-color: #e1e1e1;
     }
     /* When the checkbox is checked */
     input:checked~.checkmark {
         border-color: transparent;
         background: #515151;
         animation: jelly 0.6s ease;
-    }
-    /* Create the checkmark/indicator (hidden when not checked) */
-    .checkmark:after {
-        content: '';
-        position: absolute;
-        top: 1px;
-        left: 5px;
-        width: 3px;
-        height: 8px;
-        opacity: 0;
-        transform: rotate(45deg) scale(0);
-        border-right: 2px solid #fff;
-        border-bottom: 2px solid #fff;
-        transition: all 0.3s ease;
-        transition-delay: 0.15s;
-    }
-    /* Show the checkmark when checked */
-    input:checked~.checkmark:after {
-        opacity: 1;
-        transform: rotate(45deg) scale(1);
+        &:after {
+            opacity: 1;
+            transform: rotate(45deg) scale(1);
+        }
     }
     @keyframes jelly {
         from {
